--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         </activity>
         <activity android:name=".SingleStrokeRudActivity" />
         <activity android:name=".DoubleStrokeRudActivity" />
-        <activity android:name=".MultipleRollRudActivity"></activity>
+        <activity android:name=".MultipleRollRudActivity" />
+        <activity android:name=".DiddleStrokeRudActivity"></activity>
     </application>
 
 </manifest>
